fixed gap nav footer

--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -10,5 +10,6 @@
 @media screen and (max-width: 480px) {
     .footer__list {
         flex-direction: column;
+        gap: 32px;
     }
 }
