--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -6,7 +6,6 @@
 
 @media screen and (max-width: 480px) {
     .footer__nav {
-        gap: 32px;
         font-size: 24px;
         line-height: 100%;
     }
